--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-	"name": "validation",
+  "name": "validation",
 
 	// Set *default* container specific settings.json values on container create.
 	"settings": {
@@ -16,5 +16,5 @@
 		"davidanson.vscode-markdownlint"
 	],
 
-	"postCreateCommand": "./init.ps1 -InstallLocality Machine"
+	"postCreateCommand": "./init.ps1"
 }
